Gallery - fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,7 @@
   background-color: #fdf2e9;
   display: grid;
   grid-template-columns: 55fr 45fr;
+  align-items: center;
 }
 
 .testimonials-container {
